--- a/src/components/pages/Hero/HeroSection.css
+++ b/src/components/pages/Hero/HeroSection.css
@@ -76,12 +76,7 @@ video {
     font-size: 20px;
   }
 }
-@media screen and (max-width: 375px) {
-  .hero-container {
-    width: 100%;
-    height: 85vh;
-  }
-}
+
 @media screen and (max-width: 368px) {
   .hero-container {
     width: 105%;
